--- a/colchonet/config/locales/pt-BR.yml
+++ b/colchonet/config/locales/pt-BR.yml
@@ -26,6 +26,10 @@ pt-BR:
       title: "Título %{title}"
   confirmations:
     success: Email confirmado com sucesso, obrigado!    
+  user_sessions:
+    new:
+      title: Título
+      sign_up: 'Cadastre-se'
   signup:
     confirm_email:
       subject: 'Colcho.net - Confirme seu email'
@@ -61,6 +65,14 @@ pt-BR:
         restrict_dependent_destroy:
           has_one: Não é possível excluir o registro pois existe um %{record} dependente
           has_many: Não é possível excluir o registro pois existem %{record} dependentes
+  
+  active_model:
+    attributes:
+      email: Email
+      password: Senha
+    errors:
+      messages:
+        invalid_login: 'Usuário ou senha invalidos'          
   date:
     abbr_day_names:
     - Dom
@@ -202,6 +214,7 @@ pt-BR:
     select:
       prompt: Por favor selecione
     submit:
+      user_session: 'Entrar'
       create: Criar %{model}
       submit: Salvar %{model}
       update: Atualizar %{model}
