--- a/colchonet/config/locales/pt-BR.yml
+++ b/colchonet/config/locales/pt-BR.yml
@@ -1,5 +1,11 @@
 ---
 pt-BR:
+  dialogs:
+    destroy: 'Você	tem	certeza	que	quer	remover?'
+  flash:
+    notice:
+      signed_in: 'Login	efetuado	com	sucesso!'
+      signed_out: Logout	efetuado	com	sucesso.	Até	logo!
   layout:
     rooms: Quartos
     signup: Cadastro
@@ -16,6 +22,12 @@ pt-BR:
       location: "Localização: %{location}"
       bio: "Bio: %{bio}"
   rooms:
+    index: 
+      title: 'Quartos Disponíveis' 
+    room:
+      owner_html:	'&mdash;	%{owner}	(%{when})'
+      edit:	'Editar'
+      destroy:	'Remover'    
     new:  
       title: Cadastro
     edit:
